# projutils

./: .pydeps  README.md  pyproject.toml  test.sh  utils.py
projutils/: __init__.py
tests/: test_utils.py
utils/: __init__.py  main.py  utils.py
