[tool.poetry]
name = "utils"
version = "0.1.0"
description = "A package to handle files, logs, and host common functionalities"
authors = ["Saulo Silva Vieira"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.0"
rich = "13.5.2"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
